# notes-rust

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: build.yaml
src/: errors.rs  lib.rs  main.rs  note_list.rs  persistence.rs  storage.rs  types.rs
src/persistence/: filesystem.rs  models.rs  storage.rs
src/ui/: about_dialog.rs  app.rs  main_window.rs  mod.rs  note_content_panel.rs  note_content_view.rs  note_editor.rs  note_list.rs  note_list_item.rs  note_list_view.rs  note_panel.rs  note_view.rs  note_web_view.rs  path_select.rs  path_select_item.rs  sidebar.rs  title.rs  window.rs
src/util/: markdown.rs
